[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/base.tres" type="Theme" id=1]
[ext_resource path="res://ChooseGame.gd" type="Script" id=2]

[node name="ChooseGame" type="Node2D"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.564706, 0.839216, 1, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -48.5
margin_right = 74.0
margin_bottom = 48.5
custom_constants/separation = 35
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeliveryGuys" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_right = 148.0
margin_bottom = 31.0
text = "Delivery Guys"

[node name="AlienInvasion" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 66.0
margin_right = 148.0
margin_bottom = 97.0
text = "Alien Invasion"

[node name="Control3" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control3"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -40.0
margin_right = 154.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Control3/HBoxContainer"]
margin_top = 4.0
margin_right = 52.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/DeliveryGuys" to="." method="_on_DeliveryGuys_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/AlienInvasion" to="." method="_on_AlienInvasion_pressed"]
[connection signal="pressed" from="Control3/HBoxContainer/Back" to="." method="_on_Back_pressed"]
